Fixed the issue on the hamburger menu on mobile.

--- a/assets/css/sass/responsive.scss
+++ b/assets/css/sass/responsive.scss
@@ -480,7 +480,8 @@
     }
     .btn-menu {
         top: 35px;
-        right: 20px
+        right: 20px;
+        left: auto;
     }
     .close {
         -webkit-transform: translateY(0);
